--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Student Attendance Tracker</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js" defer></script>
+    
   </head>
   <body>
     <div id="overlay">
@@ -20,5 +20,6 @@
 
         <div id="atttendance-summary" class="mt-4 text-white"></div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
